security/authz/05-allow-details.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: allow-details
 namespace: bookinfo
spec:
 selector:
   matchLabels:
     app: details
 action: ALLOW
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/bookinfo/sa/bookinfo-productpage"]
